# pandas-nastran

./: .gitignore  Cargo.toml  README.md  build.sh  pandas-nastran.py  pyproject.toml  rbe2.py  run.sh
src/: lib.rs
